--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,9 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
+    <string name="archived_label">Archived</string>
+
+    <string name="undo_label"><u>Undo</u></string>
+    <string name="button_undo">undo</string>
+
 </resources>
